--- a/src/main/resources/templates/layout/client.html
+++ b/src/main/resources/templates/layout/client.html
@@ -34,7 +34,7 @@
             <div id="auth-section">
                 <a href="/register" class="auth-anon">Tham gia</a>
                 <a href="/login" class="auth-anon">Đăng nhập</a>
-                <a href="#" id="user-info" class="auth-user" style="display: none;">
+                <a href="/orders/history" id="user-info" class="auth-user" style="display: none;">
                     Xin chào, <span id="username">User</span>
                 </a>
                 <a href="#" id="logout-btn" class="auth-user" style="display: none;">Đăng xuất</a>
