--- a/src/main/resources/templates/layout/client.html
+++ b/src/main/resources/templates/layout/client.html
@@ -216,7 +216,16 @@
     // Make the function globally available
     window.updateHeaderCartCount = updateHeaderCartCount;
 </script>
-
-
+<script type="text/javascript">
+    (function(d, m){
+        var kommunicateSettings =
+            {"appId":"223b75a26bde8593bb14ffd3b366b0a3d","popupWidget":true,"automaticChatOpenOnNavigation":true};
+        var s = document.createElement("script"); s.type = "text/javascript"; s.async = true;
+        s.src = "https://widget.kommunicate.io/v2/kommunicate.app";
+        var h = document.getElementsByTagName("head")[0]; h.appendChild(s);
+        window.kommunicate = m; m._globals = kommunicateSettings;
+    })(document, window.kommunicate || {});
+    /* NOTE : Use web server to view HTML files as real-time update will not work if you directly open the HTML file in the browser. */
+</script>
 </body>
 </html>
