--- a/src/main/resources/templates/layout/client.html
+++ b/src/main/resources/templates/layout/client.html
@@ -145,13 +145,13 @@
 
         try {
             const res = await fetch("/api/v1/auth/info", {
-                credentials: "include", // so cookies are sent
+                credentials: "include",
                 headers: {"Accept": "application/json"}
             });
 
             if (res.ok) {
                 const data = await res.json();
-                if(data.authenticated) {
+                if (data.authenticated) {
                     usernameSpan.textContent = data.name;
                     authAnon.forEach(el => el.style.display = "none");
                     authUser.forEach(el => el.style.display = "inline-block");
@@ -177,7 +177,6 @@
         });
     }
 
-    // Update cart count when page loads
     document.addEventListener('DOMContentLoaded', function () {
         updateHeaderCartCount();
         fetchCategories();
@@ -213,19 +212,21 @@
     `;
     }
 
-    // Make the function globally available
     window.updateHeaderCartCount = updateHeaderCartCount;
 </script>
 <script type="text/javascript">
-    (function(d, m){
+    (function (d, m) {
         var kommunicateSettings =
-            {"appId":"223b75a26bde8593bb14ffd3b366b0a3d","popupWidget":true,"automaticChatOpenOnNavigation":true};
-        var s = document.createElement("script"); s.type = "text/javascript"; s.async = true;
+            {"appId": "223b75a26bde8593bb14ffd3b366b0a3d", "popupWidget": true, "automaticChatOpenOnNavigation": true};
+        var s = document.createElement("script");
+        s.type = "text/javascript";
+        s.async = true;
         s.src = "https://widget.kommunicate.io/v2/kommunicate.app";
-        var h = document.getElementsByTagName("head")[0]; h.appendChild(s);
-        window.kommunicate = m; m._globals = kommunicateSettings;
+        var h = document.getElementsByTagName("head")[0];
+        h.appendChild(s);
+        window.kommunicate = m;
+        m._globals = kommunicateSettings;
     })(document, window.kommunicate || {});
-    /* NOTE : Use web server to view HTML files as real-time update will not work if you directly open the HTML file in the browser. */
 </script>
 </body>
 </html>
