--- a/src/main/resources/templates/admin/coupon-form-ultra.html
+++ b/src/main/resources/templates/admin/coupon-form-ultra.html
@@ -244,9 +244,9 @@
                 
                 <div class="form-grid">
                     <div class="form-group">
-                        <label>Số lần sử dụng tối đa</label>
+                        <label>Tổng số voucher</label>
                         <input type="number" th:field="*{usageLimit}" min="1" placeholder="Để trống nếu không giới hạn">
-                        <div class="help-text">Tổng số lần có thể sử dụng</div>
+                        <div class="help-text">Tổng số voucher</div>
                     </div>
                     
                     <div class="form-group">
